kubernetes/ingress.yml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    kubernetes.io/ingress.class: gce
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: web-service
          servicePort: 5000
      - path: /intense
        backend:
          serviceName: web-service
          servicePort: 5000
